[add] auth
