# pkg/api/models.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
 package api
 
+const (
+	BearerAuthScopes = "BearerAuth.Scopes"
+)
+
 // Error defines model for Error.
 type Error struct {
 	Level   string `json:"level"`
@@ -24,6 +28,11 @@ type ResGetStatus struct {
 	Status bool `json:"status"`
 }
 
+// ResGetUserMe defines model for ResGetUserMe.
+type ResGetUserMe struct {
+	Id string `json:"id"`
+}
+
 // ResPostSignupCallback defines model for ResPostSignupCallback.
 type ResPostSignupCallback struct {
 	Jwt string `json:"jwt"`
@@ -31,6 +40,9 @@ type ResPostSignupCallback struct {
 
 // InternalServer defines model for InternalServer.
 type InternalServer = Error
+
+// Unauthorized defines model for Unauthorized.
+type Unauthorized = Error
 
 // PostSignupCallbackJSONBody defines parameters for PostSignupCallback.
 type PostSignupCallbackJSONBody = ReqPostSignupCallback
